--- a/docs/nginx-production-livestreaming.conf
+++ b/docs/nginx-production-livestreaming.conf
@@ -60,6 +60,7 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
     	location / {
@@ -69,7 +70,8 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            }
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
     }
 
 
