--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "webhook-discord": "^3.5.1",
     "winston": "^3.2.1",
     "ws": "^3.3.3",
-    "youtube-dl": "^2.3.0",
+    "youtube-dl": "github:mayeaux/workingyoutubedl",
     "youtube-node": "^1.3.3"
   },
   "devDependencies": {
