--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "node-ffprobe": "^1.2.2",
     "node-sass": "^4.13.1",
     "node-sass-middleware": "^0.11.0",
-    "node-webvtt": "^1.9.1",
+    "node-webvtt": "^1.9.3",
     "nodemailer": "^3.1.7",
     "nodemailer-mailgun-transport": "^1.4.0",
     "nodemon": "^1.19.0",
@@ -114,6 +114,7 @@
     "serve-favicon": "^2.5.0",
     "shelljs": "^0.7.8",
     "srt-to-vtt": "^1.1.3",
+    "srt2vtt": "^1.3.1",
     "stripe": "^4.25.0",
     "tumblr.js": "^1.1.1",
     "twilio": "^3.31.0",
