Corrects Dockerfile and docker-compose.yml
* They now work "out-of-the-box"
* Self-contained docker image
* Adds python to image so youtube-dl works
** COPY all app components instead of mounting /app/ from a code checkout
** TODO: Update docs with the new command to start
* Corrects docker compose to properly find MONGO via URI
** Deprecates MONGODB_DOCKER_URI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,12 @@ services:
     ports:
       - "49161:3000"
     volumes:
-      - .:/app/
       - /app/node_modules
       - ./upload:/app/upload
       - ./uploads:/app/uploads
     environment:
       - REDIS_HOST=redis
-      - MONGODB_DOCKER_URI=mongodb://nodetube-mongo:27017/nodetube
+      - MONGODB_URI=mongodb://nodetube-mongo:27017/nodetube
     depends_on:
       - redis
       - mongo
