Corrects the SENS (vs SENSITIVE) rating comment

--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -107,7 +107,7 @@ POPULAR_DEFAULT='all'
 # functionality to disable uploads sitewide
 UPLOADS_ON=true
 
-# level you want to allow, order from least to most controversial allowed [SFW,NSFW,SENSITIVE]
+# level you want to allow, order from least to most controversial allowed [SFW,NSFW,SENS]
 MAX_RATING_ALLOWED=SFW
 
 # whether users can purchase access to advanced features in freemium model
