--- a/docs/nginx/nginx.conf
+++ b/docs/nginx/nginx.conf
@@ -1,3 +1,5 @@
+# this file is for your server block, in combo with the http block
+
 server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
@@ -37,6 +39,7 @@ server {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
 	location / {
@@ -46,5 +49,6 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 }
