--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -125,7 +125,7 @@ DEFAULT_MAX_UPLOAD_SIZE_IN_MB=500
 # allow users to buy a Plus subscription for the site
 PLUS_ENABLED=false
 
-# default landing page [default, globe, recent]
+# default landing page [overview, recent, globe, default]
 DEFAULT_LANDING_PAGE=default
 
 # whether emails are setup to send account confirmation emails
