conform fully to npm naming

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NodeTube",
+  "name": "nodetube",
   "version": "1.0.0",
   "description": "Video, audio and image hosting",
   "repository": {
