--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "twilio": "^3.31.0",
     "twit": "^2.2.11",
     "validator": "^7.0.0",
+    "web-push": "^3.4.4",
     "webhook-discord": "^3.5.1",
     "webp-converter": "^2.3.0",
     "winston": "^3.2.1",
