Replace mailgun with protonmail for email confirmations

--- a/.env.private.sample
+++ b/.env.private.sample
@@ -37,6 +37,10 @@ EMAIL_ADDRESS=
 MAILGUN_API_KEY='exampleApiKey14134'
 MAILGUN_DOMAIN='example.domain.com'
 
+# protonmail integration for sending emails
+PROTONMAIL_USERNAME=''
+PROTONMAIL_PASSWORD=''
+
 # google recaptcha setup for registrations
 RECAPTCHA_SITEKEY=
 RECAPTCHA_SECRETKEY=
