--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "apicache": "^1.4.0",
     "backblaze-b2": "^1.3.1",
-    "bcrypt-nodejs": "^0.0.3",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
     "captchapng": "0.0.1",
@@ -91,7 +91,7 @@
     "node-sass": "^4.14.1",
     "node-sass-middleware": "^0.11.0",
     "node-webvtt": "^1.9.3",
-    "nodemailer": "^3.1.7",
+    "nodemailer": "^4.0.1",
     "nodemailer-mailgun-transport": "^1.4.0",
     "nodemon": "^1.19.0",
     "object-sizeof": "^1.3.1",
