--- a/.env.private.sample
+++ b/.env.private.sample
@@ -28,10 +28,19 @@ BACKBLAZE_ACCOUNT_ID=
 BACKBLAZE_APP_KEY=
 BACKBLAZE_BUCKET=
 
-# setup for nodemailer to send verification emails
-NODETUBE_VERIFY_EMAIL_PASSWORD=
-EMAIL_HOST=
-EMAIL_ADDRESS=
+# setup for nodemailer to send verification emails/reset password emails
+
+# your email address for no reply (noreply@domainname.com)
+NODETUBE_NOREPLY_EMAIL_ADDRESS=''
+
+# email password for no reply functionality
+NODETUBE_NOREPLY_EMAIL_PASSWORD=''
+
+# host, like smtp.mailprovder.com
+NODETUBE_NOREPLY_EMAIL_HOST=''
+
+# port, like 465 for ssl stmp
+NODETUBE_NOREPLY_EMAIL_PORT=''
 
 # mailgun integration for sending emails
 MAILGUN_API_KEY='exampleApiKey14134'
