add optional header

--- a/docs/nginx/nginx-streaming-cors.conf
+++ b/docs/nginx/nginx-streaming-cors.conf
@@ -72,79 +72,80 @@ http {
 
     	server_name _;
 
-	listen 443 ssl;
+        listen 443 ssl;
 
         ssl_certificate /home/anthony/newtube_app_chain.crt;
         ssl_certificate_key /home/anthony/server.key;
 
         error_page  405     =200 $uri;
 
-	# Bad Bot Blocker
-	include /etc/nginx/bots.d/ddos.conf;
-	include /etc/nginx/bots.d/blockbots.conf;
+        # Bad Bot Blocker
+        include /etc/nginx/bots.d/ddos.conf;
+        include /etc/nginx/bots.d/blockbots.conf;
 
 
-    	root /home/anthony/newtubeprod;
+        root /home/anthony/newtubeprod;
 
-	add_header Access-Control-Allow-Origin *;
+        # maybe this isn't the best place for this
+        add_header Access-Control-Allow-Origin *;
 
-	location /hls {
-        # Disable cache
-        add_header Cache-Control no-cache;
+        location /hls {
+            # Disable cache
+            add_header Cache-Control no-cache;
 
-        # CORS setup
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Expose-Headers' 'Content-Length';
-
-
-        # allow CORS preflight requests
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            add_header 'Content-Length' 0;
-            return 204;
-        }
-
-        types {
-            application/vnd.apple.mpegurl m3u8;
-            video/mp2t ts;
-        }
-
-        root /mnt/;
-    }
-
-            location /uploads/ {
-                gzip off;
-
-                sendfile           on;
-                sendfile_max_chunk 1m;
-
-                tcp_nopush on;
+            # CORS setup
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Expose-Headers' 'Content-Length';
 
 
-                try_files $uri @redirect;
+            # allow CORS preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
             }
 
-            location @redirect {
+            types {
+                application/vnd.apple.mpegurl m3u8;
+                video/mp2t ts;
+            }
+
+            root /mnt/;
+        }
+
+                location /uploads/ {
+                    gzip off;
+
+                    sendfile           on;
+                    sendfile_max_chunk 1m;
+
+                    tcp_nopush on;
+
+
+                    try_files $uri @redirect;
+                }
+
+                location @redirect {
+                    proxy_pass http://localhost:3000;
+                    proxy_http_version 1.1;
+                    proxy_set_header Upgrade $http_upgrade;
+                    proxy_set_header Connection 'upgrade';
+                    proxy_set_header Host $host;
+                    proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                }
+
+            location / {
                 proxy_pass http://localhost:3000;
                 proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection 'upgrade';
                 proxy_set_header Host $host;
                 proxy_cache_bypass $http_upgrade;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            }
-
-    	location / {
-            proxy_pass http://localhost:3000;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            }
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                }
     }
 
     client_max_body_size 3000M;
