--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "node-cache": "^4.2.0",
     "node-fetch": "^2.6.1",
     "node-ffprobe": "^1.2.2",
+    "node-mailjet": "^3.3.1",
     "node-sass": "^4.14.1",
     "node-sass-middleware": "^0.11.0",
     "node-webvtt": "^1.9.3",
