--- a/.env.private.sample
+++ b/.env.private.sample
@@ -30,6 +30,8 @@ BACKBLAZE_BUCKET=
 
 # setup for nodemailer to send verification emails/reset password emails
 
+
+
 # your email address for no reply (noreply@domainname.com)
 NODETUBE_NOREPLY_EMAIL_ADDRESS=''
 
@@ -45,6 +47,10 @@ NODETUBE_NOREPLY_EMAIL_PORT=''
 # mailgun integration for sending emails
 MAILGUN_API_KEY='exampleApiKey14134'
 MAILGUN_DOMAIN='example.domain.com'
+
+MAILJET_PRIVATE_KEY=''
+MAILJET_PUBLIC_KEY=''
+
 
 # protonmail integration for sending emails
 PROTONMAIL_USERNAME=''
