--- a/.env.private.sample
+++ b/.env.private.sample
@@ -51,6 +51,8 @@ MAILGUN_DOMAIN='example.domain.com'
 MAILJET_PRIVATE_KEY=''
 MAILJET_PUBLIC_KEY=''
 
+#sendgrid key
+SENDGRID_KEY=''
 
 # protonmail integration for sending emails
 PROTONMAIL_USERNAME=''
