--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "postinstall": "node ./copySettingsAndPrivateFiles.js",
     "eslint": "eslint ./",
     "eslint:fix": "./node_modules/.bin/eslint --fix .",
-    "dev": "nodemon -e pug,js app.js",
+    "dev": "nodemon -e js app.js",
     "memory": "node --max-old-space-size=4096 app.js",
     "cache": "node --max-old-space-size=8000 caching/runCaching.js",
     "caching": "node --max-old-space-size=8000 caching/runCaching.js",
@@ -59,7 +59,7 @@
     "express-session": "^1.16.1",
     "express-status-monitor": "^1.3.3",
     "express-useragent": "^1.0.12",
-    "express-validator": "^3.1.2",
+    "express-validator": "^3.2.1",
     "fbgraph": "^1.4.4",
     "file-type": "^15.0.1",
     "fluent-ffmpeg": "^2.1.2",
