Fixed docker image - added streaming functionality to Docker
- Added Nginx-rtmp service
- Scraped the running config from Anthony's `/docs/nginx` folder and modified it for docker
- changed localhost refferences for nodetube service to `"nodetube:3000"`
- added `./recordings` for when recording is on - Off by default
- added `./config/nginx/nginx.conf` file which is passed directly to the nginx service on `docker-compose up`

* Need to update readme.MD
* Need change prod and dev environments for docker
* Need to provide non-docker friendly nginx config template (can be modified though, its heavily commented)

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,10 @@
+# Refferecne link with good Nginx optimazations
+# https://www.netguru.com/codestories/nginx-tutorial-performance
+
 # Required for Docker, comment this for direct source hosting
 daemon off;
+
+#user  nobody;
 
 #Change to the number of cores on host (not required)
 worker_processes  1;
@@ -9,6 +14,8 @@ error_log /dev/stdout info;
 
 # Comment the above and uncomment the below for debugging (Will cause lag)
 # error_log /dev/stdout debug;
+
+#pid var/nginx.pid;
 
 events {
     worker_connections  1024;
@@ -23,7 +30,24 @@ rtmp {
                 application live {
                         live on;
 
-                        # Renderer - unimplemented for now
+                        # recording to ./recordings dosnt seem to have any benefit to the user at the moment.
+                        # Admin would need to upload the .flv on the users bahalve which is not ideal...
+                        # Default is off, however switching this on will download save all uploads to ./recordings
+                        record off;
+                        # record all;
+                        record_append on;
+                        record_suffix &%Y%m%d%H%M%S.flv;
+                        record_path /app/recordings;
+
+                        on_publish http://nodetube:3000/livestream/on-live-auth;
+                        on_publish_done http://nodetube:3000/livestream/on-live-done;
+
+                        hls on;
+                        hls_path /app/hls;
+                        hls_playlist_length 60s;
+                        hls_fragment 3s;
+
+                        # #Re-renderer - unimplemented for now
                         # exec ffmpeg -i rtmp://localhost:1935/stream/$name
                         #     -c:a libfdk_aac -b:a 128k -c:v libx264 -b:v 2500k -f flv -g 30 -r 30 -s 1280x720 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_720p2628kbs
                         #     -c:a libfdk_aac -b:a 128k -c:v libx264 -b:v 1000k -f flv -g 30 -r 30 -s 854x480 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_480p1128kbs
@@ -31,22 +55,8 @@ rtmp {
                         #     -c:a libfdk_aac -b:a 128k -c:v libx264 -b:v 400k -f flv -g 30 -r 30 -s 426x240 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_240p528kbs
                         #     -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 200k -f flv -g 15 -r 15 -s 426x240 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_240p264kbs;
 
-                        # Investigating approuch
-                        record all;
-                        record_append on;
-                        record_suffix &%Y%m%d%H%M%S.flv;
-                        record_path /app/recordings;
-
-                        on_publish http://localhost:3000/livestream/on-live-auth;
-                        on_publish_done http://localhost:3000/livestream/on-live-done;
-
-                        hls on;
-                        hls_path /app/hls;
-                        hls_playlist_length 60s;
-                        hls_fragment 3s;
                 }
-                # hls implemented as a seperate app - unimplemented
-                #
+                # #hls implemented as a seperate app - unimplemented
                 # application hls {
                 #     live on;
                 #     hls on;
@@ -67,15 +77,26 @@ rtmp {
 
 
 http {
-    access_log /dev/stdout combined;
-
     include mime.types;
     default_type application/octet-stream;
-    sendfile on;
-    keepalive_timeout  65;
 
-    # SOURCE NOT FOUND, Need to get this from Anthony
-    # include /etc/nginx/conf.d/*;
+    access_log /dev/stdout combined;
+
+    # Optimization to copy Object to cache and pass pointer instead of whole object
+    # Provides a signifigant boost to network throughput.
+    sendfile on;
+
+    # Wait until maximum size (MSS) is reached and then send to client
+    # sendfile must be on for this option to work
+    tcp_nopush on;
+
+    # Legacy solution to reduce TCP overhead and send packets as soon as possible
+    # Will cause additonal delay of approx 200ms when off but ensures ACK is recevied
+    # additionally tcp_nopush conflicts with tcp_nodelay
+    tcp_nodelay off;
+    
+    # Kill session after 65 second of no response
+    keepalive_timeout  65;
 
     # If SSL is enabled
     ssl_ciphers         HIGH:!aNULL:!MD5;
@@ -111,8 +132,14 @@ http {
         location /hls {
             # Disable cache
             add_header Cache-Control no-cache;
+            #add_header Access-Control-Allow-Origin *;
 
-            add_header Access-Control-Allow-Origin *;
+            types {
+                application/vnd.apple.mpegurl m3u8;
+                video/mp2t ts;
+            }
+
+            root /app;
 
             # CORS setup
             add_header 'Access-Control-Allow-Origin' '*' always;
@@ -126,13 +153,6 @@ http {
                 add_header 'Content-Length' 0;
                 return 204;
             }
-            
-            types {
-                application/vnd.apple.mpegurl m3u8;
-                video/mp2t ts;
-            }
-
-            root /mnt;
         }
 
         location /uploads {
@@ -144,7 +164,7 @@ http {
         }
 
         location @redirect {
-            proxy_pass http://localhost:3000;
+            proxy_pass http://nodetube:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -154,7 +174,7 @@ http {
         }
 
         location / {
-            proxy_pass http://localhost:3000;
+            proxy_pass http://nodetube:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
