--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "49161:3000"
     volumes:
       - /app/node_modules
+      - ./recordings:/app/recordings
+      - ./hls:/app/hls
       - ./upload:/app/upload
       - ./uploads:/app/uploads
     environment:
@@ -45,9 +47,8 @@ services:
     ports:
       - "1935:1935"
     volumes:
-      - /app/hls
-      - /app/recordings
       - ./config/nginx.conf:/etc/nginx/nginx.conf.template
+      - ./recordings:/app/recordings
       - ./upload:/app/upload
       - ./uploads:/app/uploads
     networks:
