--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -100,9 +100,9 @@ OPTIONAL_HEADER_ON=false
 ZOPIM_ON=false
 
 # ADMIN SETTINGS #
-# require uploads to be moderated to be pubilcly visible
-# false means posts show up publicly visible
-# true means they need to be moderated
+# require moderation on uploads if from an Untrusted user
+# false means posts show up publicly visible by default
+# true means they need to be moderated (approved by admin or mod)
 RESTRICT_UNTRUSTED_UPLOADS=false
 
 // show all or categories page via popular on header
