--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "paypal-rest-sdk": "^1.8.1",
     "pug": "^2.0.3",
     "randomstring": "^1.1.5",
+    "read-chunk": "^3.2.0",
     "recaptcha2": "^1.3.3",
     "redis": "^2.8.0",
     "request": "^2.88.0",
