--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "@sendgrid/mail": "^7.4.0",
+    "akismet-api": "^5.3.0",
     "apicache": "^1.4.0",
     "backblaze-b2": "^1.3.1",
     "bcrypt-nodejs": "^0.0.3",
