--- a/.env.private.sample
+++ b/.env.private.sample
@@ -109,4 +109,5 @@ SESSION_SECRET=setABetterSecretInProduction
 # Google Adsense
 #ADSENSE_ID=ca-pub-xxx
 
+# Akismet key for comment spam blocking
 AKISMET_API_KEY=''
