--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "which": "^2.0.2",
     "winston": "^3.2.1",
     "ws": "^3.3.3",
-    "youtube-dl": "github:mayeaux/workingyoutubedl",
+    "youtube-dl": "https://github.com/mayeaux/workingyoutubedl",
     "youtube-node": "^1.3.3"
   },
   "devDependencies": {
