--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "fbgraph": "^1.4.4",
     "file-type": "^15.0.1",
     "fluent-ffmpeg": "^2.1.2",
-    "forever": "^2.0.0",
+    "forever": "^4.0.3",
     "formidable": "^1.2.1",
     "fs-extra": "^4.0.3",
     "generate-video-sprites-node": "^1.0.3",
@@ -97,7 +97,7 @@
     "node-webvtt": "^1.9.3",
     "nodemailer": "^3.1.7",
     "nodemailer-mailgun-transport": "^1.4.0",
-    "nodemon": "^1.19.0",
+    "nodemon": "^2.0.20",
     "object-sizeof": "^1.3.1",
     "passport": "^0.6.0",
     "passport-facebook": "^2.1.1",
@@ -136,7 +136,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "eslint": "^4.18.2",
+    "eslint": "^8.23.1",
     "eslint-config-airbnb-base": "^11.3.2",
     "eslint-plugin-chai-friendly": "^0.2.0",
     "eslint-plugin-import": "^2.17.2",
@@ -166,6 +166,9 @@
     },
     "plugins": [
       "chai-friendly"
-    ]
+    ],
+    "resolutions": {
+      "minimist": "1.2.6"
+    }
   }
 }
